<resources>
    <string name="app_name">Circuit Solver</string>

    <string name="take_picture">Take Picture</string>
    <string name="title_activity_home">Circuit Solver</string>
    <string name="saved_circuits">Saved Circuits:</string>
    <string name="example_circuits">Example Circuits:</string>
    <string name="title_activity_analysis">AnalysisActivity</string>
    <string name="button_to_ui">Test UI</string>
    <string name="title_activity_edit">EditActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!--Draw Activity Strings-->
    <string name="component_value">Component Value</string>

    <string name="add_button_tag">Add</string>
    <string name="change_button_tag">Change</string>
    <string name="erase_button_tag">Erase</string>
    <string name="solve_button_tag">Solve</string>

    <string name="move_button_tag">Move</string>
    <string name="edit_button_tag">Edit</string>

    <string name="lowercase_ohms">ohms</string>
    <string name="lowercase_voltage">voltage</string>
    <string name="lowercase_current">current</string>


    <!--Tensorflow strings-->
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="instructions">
        Welcome to CircuitSolver!\nWhen drawing on paper:\n
        • only draw horizontal and vertical lines\n
        • draw voltage sources +/- inside a circle\n\n
        In App:\n
        • only voltage sources and resistors are supported at the moment\n
        • you can only connect components at the beginning or end of components\n
        • it will take roughly 3 seconds per component to process
    </string>
</resources>
