...
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|center"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--app:srcCompat="@drawable/cam_icon" />-->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/processing_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="bottom|center"
        app:backgroundTint="@color/processing_green"
        android:visibility="gone"
...
